# rs2info

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main.h  videoModes.txt
